--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "ngx-scroll-event",
-	"version": "1.0.8",
-	"description": "An Angular 2+ directive to handle scroll events on an element.",
+	"name": "ngx-scroll-event-universal",
+	"version": "1.0.9",
+	"description": "An Angular 5+ directive to handle scroll events on an element.",
 	"scripts": {
 		"build": "ngc -p tsconfig.json",
 		"lint": "tslint --type-check --project tsconfig.json src/**/*.ts",
@@ -16,9 +16,9 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/anasAsh/ng2-scroll-event"
+		"url": "git+https://github.com/kashishgupta1990/ng2-scroll-event-universal"
 	},
-	"author": "anasAsh",
+	"author": "Kashish",
 	"keywords": [
 		"scroll",
 		"directive",
